[package]
name = "todo-service"
version = "0.1.0"
authors = ["alank <alankan976@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
validator = "0.10.0"
validator_derive = "0.10.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.50"
env_logger = "0.7"
log = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
sqlx = { version = "0.3", features = ["postgres", "uuid", "json", "time"] }
async-trait = "0.1.29"
time = { version = "0.2", features = ["serde"] }

[dev-dependencies]
mockiato = "0.9"
